force-app/main/default/objects/Contact_Role__c/Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Role</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>