force-app/main/default/objects/Contact_Role__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Contacts Role</relationshipLabel>
    <relationshipName>Contacts_Role</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>