force-app/main/default/objects/Contact_Role__c/fields/Maximun_invitations__c.field-meta.xml
<CustomField>
    <fullName>Maximun_invitations__c</fullName>
    <description>Maximum number of allowed OC vouchers per Hotelier IR-OC</description>
    <label>Maximun d&apos;invitations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>