force-app/main/default/objects/Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>SIEGE</fullName>
            </value>
            <value>
                <fullName>SRC</fullName>
            </value>
            <value>
                <fullName>IR-OC</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>