force-app/main/default/objects/Contact_Role__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>RESEAU</fullName>
            </value>
            <value>
                <fullName>BUILD</fullName>
            </value>
            <value>
                <fullName>VENTES CORPORATE</fullName>
            </value>
            <value>
                <fullName>VENTES LOISIRS</fullName>
            </value>
            <value>
                <fullName>DIRECTION GENERALE</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>SRC</fullName>
            </value>
            <value>
                <fullName>SRC Promos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>