force-app/main/default/objects/Contact_Role__c/fields/Tech_ContactName__c.field-meta.xml
<CustomField>
    <fullName>Tech_ContactName__c</fullName>
    <description>Tech field used in the component LC21_DashboardOCQuotasManagement</description>
    <formula>Contact__r.FirstName &amp; &apos; &apos; &amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_ContactName</label>
    <type>Text</type>
</CustomField>