force-app/main/default/objects/Contact_Role__c/fields/Tech_CurrentYear__c.field-meta.xml
<CustomField>
    <fullName>Tech_CurrentYear__c</fullName>
    <description>Tech field used in LC21_DashboardOCQuotasManagement</description>
    <formula>YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CurrentYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>