force-app/main/default/objects/Contact_Role__c/fields/Tech_HotelName__c.field-meta.xml
<CustomField>
    <fullName>Tech_HotelName__c</fullName>
    <description>Tech field used in the component LC21_DashboarsOCQuotasManagement</description>
    <formula>Hotel__r.Commercial_Hotel_Name__c</formula>
    <label>Tech_HotelName</label>
    <type>Text</type>
</CustomField>