force-app/main/default/objects/Contact_Role__c/fields/Type_Interlocuteur__c.field-meta.xml
<CustomField>
    <fullName>Type_Interlocuteur__c</fullName>
    <label>Type Interlocuteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gérant</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Directeur</fullName>
            </value>
            <value>
                <fullName>Réceptionniste</fullName>
            </value>
            <value>
                <fullName>Co-gérant</fullName>
            </value>
            <value>
                <fullName>Personne du siège</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>